# moyu_music_player

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  errors.rs  lib.rs  main.rs
src-tauri/src/audio/: audio_engine.rs  audio_state.rs  audio_worker.rs  bass_ffi.rs  bass_loader.rs  mod.rs
src-tauri/src/commands/: audio_commands.rs  library_commands.rs  mod.rs  playlist_commands.rs  scan_commands.rs  settings_commands.rs  utility_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  playlist_repo.rs  settings_repo.rs  song_repo.rs
src-tauri/src/settings/: settings.rs
src/components/: AppHeader.vue  AppLayout.vue  MiniPlayer.vue  PlayerBar.vue  Sidebar.vue  TrackList.vue
src/stores/: app.ts  player.ts  playlist.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: format.ts
